--- a/PosApp/app/build.gradle
+++ b/PosApp/app/build.gradle
@@ -43,6 +43,8 @@ android {
         implementation 'com.google.code.gson:gson:2.9.0'
 
         implementation 'com.github.bumptech.glide:glide:4.12.0'
+        implementation 'com.google.android.gms:play-services-location:21.0.1'
+        implementation 'com.google.android.gms:play-services-maps:18.1.0'
         annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 // Retrofit
@@ -99,6 +101,8 @@ android {
         implementation 'com.google.android.material:material:1.8.0'
 
         implementation 'androidx.fragment:fragment-ktx:1.5.5'
+
+        implementation 'org.mindrot:jbcrypt:0.4'
 
         tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
             kotlinOptions {
